<resources>
    <string name="app_name">matala1</string>
    <string name="Summary_txt_main">Summary</string>
    <string name="trailer_main_txt">Trailer Pictures</string>
    <string name="start_order_main_txt">Start Order</string>
    <string name="Title_Summary_txt">BALOO\'S ADVENTURES</string>
    <string name="In_text_summary">Baloo, a sweet and playful six-year-old dog, is no ordinary pup.  Half Golden Retriever and half Belgian Shepherd, he was adopted into our family as a tiny, curious puppy. From the moment he arrived, Baloo brought joy and energy into our lives. Together, we\'ve explored breathtaking trails, strolled along sandy beaches, and discovered hidden parks.</string>
    <string name="Cont_text_summary">  Baloo\'s favorite meals include crunchy carrots and the occasional salmon treat.  His hobbies? Endless belly rubs, playful games with his dog friends, and chasing after sticks.  Join us as we relive the heartwarming and adventurous journey of our beloved Baloo!</string>
    <string name="home_page_btn">Home Page</string>
    <string name="click_on_the_icon">(click on the icon)</string>
    <string name="selected_date_will_appear_here">Selected Date will appear here</string>
    <string name="age_divide">Select Your Age divide</string>
    <string name="full_name">Enter Your Full Name</string>
    <string name="click_on_me">Click On Me</string>
    <string name="tickets_num">How Many Tickets do you want?</string>
    <string name="minus">-</string>
    <string name="number_of_tickets">0</string>
    <string name="plus">+</string>

    <string name="date_button">date button</string>
    <string name="adult_radio">Adult</string>
    <string name="child_button">child</string>
    <string name="thethre_title">Select Your Required Theatre:</string>
    <string name="oneChoice">Tel-Aviv</string>
    <string name="timeAdding">Write a Time</string>
    <string name="secoundchoice">Haifa</string>
    <string name="threecohice">Eilat</string>
    <string name="price_title">Total price is:</string>
    <string name="price_total">0 NIS</string>
    <string name="Confirm_btn">Confirm</string>
    <string name="calc_btn">Calcaluate</string>
    <string name="home_btn">Home</string>
    <string name="Name_text">Your Name is:</string>
    <string name="number_tickets_req">Your Number Of Tickets is:</string>
    <string name="date_txt">The Movie Date is:</string>
    <string name="check_Age">Your Age Divide is:</string>
    <string name="add_drink">Add Drink(10 NIS)-> Per Ticket</string>
    <string name="add_popcorn">Add Popcorn(15 NIS) -> Per Ticket</string>
    <string name="addition_summary">Additions: </string>
    <string name="checked_popcorn">Popcorn Checked</string>
    <string name="unchecked_popcorn">Popcorn Unchecked</string>
    <string name="checked_drink">Drink Checked</string>
    <string name="unchecked_drink">drink Unchecked</string>
    <string name="popcorn">Popcorn</string>
    <string name="drinks">Drinks</string>
    <string name ="combineadds">Popcorn and Drinks</string>
    <string name ="empty">none</string>
    <string name="pmovie">Movie Prices</string>
    <string name="closewindow">Close</string>
    <string name="thethre_pick">The Theathre is:</string>
    <string name="price_title_Txt">The Total Price is:</string>
    <string name="purchase_status_complete">Purchase Status: Complete</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <string name="Home">Home</string>
    <string name="Invalid_tickets_amount">"Cannot go below 0 tickets"</string>
    <string name="Over_amount">"Cannot go over 50 tickets"</string>
    <string name="date_limit">"Selected date must be today or later"</string>
    <string name="calc_checl">"cant calcaluate your order - invalid input"</string>
    <string name="cinema_check">"Invalid input: Please select a cinema."</string>
    <string name="amount_by_choose">"Invalid input:More Tickets From Picks"</string>
    <string name="full_name_check">"Invalid Name"</string>
    <string name="ticketsamount_check">"Invalid amount of tickets"</string>
    <string name="date_check">"Invalid date"</string>
    <string name="div_check">"Invalid input: Please enter valid ticket divide numbers"</string>
    <string name="finalorder">"Your Order Been Complete"</string>
    <string name="Showprice">price list And screening Hours</string>
    <string name="baloo_swimming">Baloo Swimming</string>
    <string name="baloo_in_day_trip">Baloo in day-trip</string>
    <string name="baloo_in_nature">Baloo in Nature</string>
    <string name="baloo_in_gilboa_mounts">Baloo in Gilboa Mounts</string>
    <string name="baloo_in_the_river">Baloo in the river</string>
    <string name="baloo_play_with_snow">Baloo play with snow</string>
    <string name="baloo_in_sunset">Baloo in sunset</string>
    <string name="the_required_hour">The Required Hour</string>
    <string name="additions">Additions:</string>
    <string name="add_drink_10_nis_per_ticket">Add Drink(10 NIS)-> Per Ticket</string>
    <string name="add_popcorn_15_nis_per_ticket">Add Popcorn(15 NIS) -> Per Ticket></string>
    <string name="format_hh_mm_see_in_instruction_and_price_list">Format: HH:MM see in instruction and price list</string>


</resources>