<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:paddingStart="10dp"
            android:text="@string/full_name" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/FullNameText"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:hint="@string/click_on_me"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickets_num"
            android:paddingStart="5dp"
            android:textSize="17sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="-"
            android:textColor="@color/black"
            android:padding="2dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_quantity"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/number_of_tickets"
            android:padding="2dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        >
     <ImageButton
         android:id="@+id/calenderbutton"
         android:contentDescription="@string/date_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="5dp"
         android:src="@drawable/baseline_edit_calendar_24"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:hint="@string/click_on_the_icon" />

        <TextView
            android:id="@+id/Calendertxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/selected_date_will_appear_here"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="2dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:paddingStart="10dp"
            android:text="@string/timeAdding" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/HourText"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:hint="@string/format_hh_mm_see_in_instruction_and_price_list"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="2dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/age_divide"
            android:gravity="center"
            android:textSize="16sp"
            />
            <EditText
                android:id="@+id/adult_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/adult_radio"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/child_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:hint="@string/child_button"
                android:textSize="14sp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:text="@string/thethre_title" />
            <RadioGroup
                android:id="@+id/cinema_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/Tel_aviv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneChoice"
                    android:textSize="13sp"/>

                <RadioButton
                    android:id="@+id/Haifa"
                    android:layout_marginStart="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secoundchoice"
                    android:textSize="13sp"/>

                <RadioButton
                    android:id="@+id/Eilat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/threecohice"
                    android:layout_marginStart="1dp"
                    android:textSize="13sp"/>
            </RadioGroup>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:layout_marginTop="10dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AddDrink"
            android:text="@string/add_drink_10_nis_per_ticket"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:checked="false"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AddPopcorn"
            android:checked="false"
            android:text="@string/add_popcorn_15_nis_per_ticket"
            android:textSize="13sp"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/price_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/summary_price"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/price_total"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="10dp"
        >
        <Button
            android:id="@+id/showprice"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="#6A8A53"
            android:background="@android:color/transparent"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/Showprice"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/Confirmbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
            android:backgroundTint="@null"
            android:background="@android:color/transparent"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/Calcaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
            android:backgroundTint="@null"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/HomePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
            android:backgroundTint="@null"
            android:background="@android:color/transparent"
            />
    </LinearLayout>
    </LinearLayout>