<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bp"
>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textColor="#6A8A53"
        android:text="@string/Title_Summary_txt"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/In_text_summary"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_margin="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cont_text_summary"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/HomePage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="@android:color/transparent"
        android:text="@string/home_page_btn"
        android:textColor="#6A8A53"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold" />
</LinearLayout>