<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LayoutSummary"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/bp"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layourfortranspancy"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="125dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name_text"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getFullName"
            android:textSize="17sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_tickets_req"
            android:textSize="17sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getTickets"
            android:textSize="17sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_txt"
            android:textSize="17sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:id="@+id/getDate"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_required_hour"
                android:textSize="17sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:id="@+id/getTime"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/check_Age"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:id="@+id/getAge"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/thethre_pick"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:layout_height="wrap_content"
            android:id="@+id/getTheatre"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/additions"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:layout_height="wrap_content"
            android:id="@+id/getAddition"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="17sp"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/price_title_Txt"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:id="@+id/getPrice"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/purchase_status_complete"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:id="@+id/Status_purchase"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:layout_marginTop="50dp"
        >
        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/Confirm"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            />
        <Button
            android:id="@+id/back_of_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Back"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
           android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/HomePage"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/home_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#6A8A53"
            android:backgroundTint="@null"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>