<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bm"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="420dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bm"
        >

    <Button
        android:id="@+id/summary_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/Summary_txt_main"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@drawable/buttondesign"
        android:textStyle="bold" />

    <Button
        android:id="@+id/trailer_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/trailer_main_txt"
        android:textColor="@color/white"
        android:background="@drawable/buttondesign"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/start_order_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/start_order_main_txt"
        android:textColor="@color/white"
        android:background="@drawable/buttondesign"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>